@@ -162,6 +162,7 @@
     <ClCompile Include="ConsoleToolsRunner.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\shared\colorer\parsers\TextParserImpl.h" />
     <ClInclude Include="..\zlib\inffast.h" />
     <ClInclude Include="..\zlib\inftrees.h" />
     <ClInclude Include="..\zlib\zutil.h" />
